<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.sub_activity.assign_program.mchn.PW">

    <!-- Header aligned to top -->
    <include
        android:id="@+id/header"
        layout="@layout/header" />
    <!--  page panel -->
    <RelativeLayout
        android:id="@+id/page_title"
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <TextView
            android:id="@+id/tv_ass_pageTitle"

            style="@style/page_title_style"


            android:text="@string/assign_pw_title" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/assigne_ScrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/page_title"

        >

        <LinearLayout

            android:id="@+id/ll_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"

            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/txt_label"
                        android:text="@string/member_id" />

                    <TextView
                        style="@style/txt_label"
                        android:text="@string/mem_name" />

                    <TextView
                        style="@style/txt_label"
                        android:text="@string/hh_name" />


                    <TextView
                        style="@style/txt_label"
                        android:text="@string/criteria_label" />

                    <TextView
                        style="@style/txt_label"
                        android:text="@string/reg_date" />

                    <TextView
                        style="@style/txt_label"
                        android:text="@string/lmp_date" />

                    <TextView
                        style="@style/txt_label"

                        android:text="@string/category_label" />

                    <TextView
                        style="@style/txt_label"

                        android:text="@string/group_label" />

                    <TextView
                        style="@style/txt_label"

                        android:text="@string/active_lable" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/as_PW_ed_MemberID"
                        style="@style/text_view"
                        android:hint="@string/member_id" />

                    <TextView
                        android:id="@+id/as_PW_ed_MemberName"
                        style="@style/text_view"
                        android:hint="@string/mem_name" />

                    <TextView
                        android:id="@+id/as_PW_ed_hhName"
                        style="@style/text_view"
                        android:clickable="false"
                        android:hint="@string/hh_name" />


                    <TextView
                        android:id="@+id/as_PW_ed_asCriteria"
                        style="@style/text_view"
                        android:hint="@string/criteria_label" />
                    <!-- Registration Date-->
                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/white"
                        android:padding="10dp">


                        <TextView
                            android:id="@+id/as_PW_edt_regD"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:hint="Registration Date"
                            android:text="Date"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/black"
                            android:textSize="14dp" />
                    </RelativeLayout>

                    <!-- LMP Date -->
                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/white"
                        android:padding="10dp">


                        <TextView
                            android:id="@+id/as_PW_edt_lmpDate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:hint="LMP Date"
                            android:text="Date"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/black"
                            android:textSize="14dp" />

                    </RelativeLayout>

                    <Spinner
                        android:id="@+id/sp_ass_pwGroupCategories"
                        style="@style/spinner_style"
                        android:layout_width="match_parent" />

                    <Spinner

                        android:id="@+id/sp_ass_pwGroup"
                        style="@style/spinner_style"
                        android:layout_width="match_parent" />

                    <Spinner

                        android:id="@+id/sp_ass_pwActive"
                        style="@style/spinner_style"
                        android:layout_width="match_parent" />


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <!-- Save Button -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/lv_assign"
        android:gravity="bottom">

        <!-- Save Button -->
        <Button
            android:id="@+id/btn_PW_goAssignePage"

            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_style_inner"

            android:text="@string/btn_label_submit"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/btn_assign_PW_save"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_style_inner"

            android:text="@string/btn_AssignLabel"
            android:textColor="@color/green" />

    </LinearLayout>

    <include layout="@layout/footer" />


</RelativeLayout>
